# crm_tools_evaluation

./: .env.example  .gitignore  README.md  process.py  process_results.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: run.yml
data/: companies.jsonl  contacts.jsonl  deals.jsonl  leads.jsonl  tasks.jsonl
src/: crm_agent.py  dump_hubspot.py  dump_salesforce.py  evaluator.py  mcp_toolset.py  reset_hubspot.py  reset_salesforce.py  shared.py  vibecode_toolset.py
src/processing/: pass_k.py  utils.py
