[project]
name = "crm-tools-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.12"
dependencies = [
  "pydantic",
  "dotenv",
  "litellm",
  "superface",
  "requests",
  "composio-openai"
]
